# nuggtech-bot

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  todo.md
examples/: config.json  config.py  taurus.md
examples/servers/: server.json
extra/: example.toml
src/: bot.py  bridge.py  main.py
src/cogs/: member.py  public.py  server.py
src/cogs/admin/: backup.py  debug.py  manage.py  rcon.py  whitelist.py
src/cogs/maintainer/: debug.py
src/cogs/member/: info.py
src/cogs/member/carpet/: counter.py  profile.py  raid.py  scounter.py  spawn.py  tick.py  warp.py
src/cogs/public/: pet.py  stat.py  stats.py
src/commands/: server.py
src/scripts/: stat.py
