[tool.poetry]
name = "nuggtech-bot"
version = "0.2.0"
description = "A Discord bot and chatbridge for the NuggTech TMC server"
authors = ["Soi <soulsoill@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
websockets = "^12.0"
setuptools = "^69.1.0"
mcdreforged = "^2.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
