[project]
name = "nuggtech-bot"
version = "0.2.0"
description = "A Discord bot and chatbridge for TMC servers"
authors = ["Soi <no.sleep410@passinbox.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "discord-py>=2.6.4",
  "websockets>=15.0.1",
]

[tool.ruff]
indent-width = 2
